CI: add option to manually build Docker image

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -12,5 +12,5 @@ steps:
         from_secret: DOCKER_PASSWORD
     when:
       branch: [ v2 ]
-      event: [ tag, release ]
+      event: [ tag, release, manual ]
     
