--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -4,7 +4,7 @@ steps:
     settings:
       dockerfile: Dockerfile
       registry: https://docker.io
-      repo: codeberg.org/VnPower/PixivFE
+      repo: vnpower/pixivfe
       platforms: linux/amd64,linux/arm64
       username:
         from_secret: DOCKER_USERNAME
