.env.example: remove quotation marks

--- a/.env.example
+++ b/.env.example
@@ -2,15 +2,14 @@
 # See https://pixivfe.pages.dev/environment-variables/ for more details
 
 # -- Required variables
-# NOTE: PixivFE can be exposed on either a port or a Unix socket
-PIXIVFE_PORT="8282"
-# PIXIVFE_UNIXSOCKET="/srv/http/pages/pixivfe" # Ignored if PIXIVFE_PORT is set
-# PIXIVFE_TOKEN=changethis # Only set here if not using a secret
+PIXIVFE_PORT=8282
+# PIXIVFE_UNIXSOCKET=/srv/http/pages/pixivfe
+# PIXIVFE_TOKEN=changethis
 
 # -- Optional variables
-# PIXIVFE_DEV=
-PIXIVFE_HOST="127.0.0.1"
+PIXIVFE_HOST=127.0.0.1
 # PIXIVFE_REQUESTLIMIT=
 # PIXIVFE_IMAGEPROXY=
-PIXIVFE_USERAGENT="Mozilla/5.0 (Windows NT 10.0; rv:123.0) Gecko/20100101 Firefox/123.0"
-PIXIVFE_ACCEPTLANGUAGE="en-US,en;q=0.5"
+PIXIVFE_USERAGENT=Mozilla/5.0 (Windows NT 10.0; rv:123.0) Gecko/20100101 Firefox/123.0
+PIXIVFE_ACCEPTLANGUAGE=en-US,en;q=0.5
+# PIXIVFE_DEV=
