.env.example: edit note at beginning

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # -- PixivFE configuration
-# See https://pixivfe.pages.dev/environment-variables/ for more details
+# Refer to https://pixivfe.pages.dev/environment-variables/ for detailed explanations of these variables
 
 # -- Required variables
 PIXIVFE_PORT=8282
