--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -20,10 +20,9 @@ steps:
 
   generate-docs:
     image: woodpeckerci/plugin-mkdocs:minimal
-    directory: doc
     settings:
       verbose: true
-      pip_install_file: requirements.txt
+      pip_install_file: doc/requirements.txt
     when:
       branch: [ v2 ]
       path: *docs_path
@@ -31,9 +30,8 @@ steps:
 
   deploy-docs:
     image: codeberg.org/xfix/plugin-codeberg-pages-deploy:1
-    directory: doc
     settings:
-      site_dir: build
+      site_dir: site
       ssh_key:
         from_secret: DOCS_SSH_KEY
     when:
