--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: PixivFE Documentation
+docs_dir: doc
 site_description: >-
   Documentation for PixivFE
-site_dir: public
 nav:
   - "Home": "index.md"
   - "Instance list": "instance-list.md"
@@ -12,9 +12,9 @@ nav:
     - "Hosting PixivFE": "hosting-pixivfe.md"
     - "Hosting an image proxy server for Pixiv": "hosting-image-proxy-server.md"
     - "Obtaining the PIXIVFE_TOKEN cookie": "obtaining-pixivfe-token.md"
-repo_name: pixivfe/pixivfe-docs
-repo_url: https://gitlab.com/pixivfe/pixivfe-docs
-edit_uri: edit/master/docs/
+repo_name: vnpower/pixivfe
+repo_url: https://codeberg.org/vnpower/pixivfe
+edit_uri: edit/master/doc/
 copyright: GFDL-1.3-or-later
 theme:
   name: material
