--- a/semgrep.yml
+++ b/semgrep.yml
@@ -153,3 +153,14 @@ rules:
   patterns:
   - pattern: |
       StatusFound
+- id: rule-12
+  message: "response body not closed"
+  comment: "Needed to reuse connections"
+  languages: [go]
+  severity: ERROR
+  patterns:
+  - pattern: |
+      ($RESP : *http.Response), $ERR := ...
+  - pattern-not-inside: |
+      ...
+      defer $RESP.Body.Close()
