docs: fix favicon
trying to access directories higher than docs_dir doesn't seem to
work, so just copy favicon.ico over into the dir

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,7 +46,7 @@ theme:
         name: Switch to light theme
   icon:
     logo: simple/pixiv
-  favicon: assets/img/favicon.ico
+  favicon: favicon.ico
   features:
     # -- Navigation
     # Instant loading
