--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -164,10 +164,14 @@ markdown_extensions:
       clickable_checkbox: true
 
 extra_javascript:
+  # -- JavaScript files for sortable tables
+  # src: https://squidfunk.github.io/mkdocs-material/reference/data-tables/#sortable-tables
   - "https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js"
   - js/tablesort.js
 
 extra_css:
+  # -- For custom PixivFE color scheme
+  # src: https://squidfunk.github.io/mkdocs-material/setup/changing-the-colors/#custom-colors
   - css/extra.css
 
 extra:
