update pixivfe.pages.dev to pixivfe-docs.pages.dev

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # -- PixivFE configuration
-# Refer to https://pixivfe.pages.dev/environment-variables/ for detailed explanations of these variables
+# Refer to https://pixivfe-docs.pages.dev/environment-variables/ for detailed explanations of these variables
 
 # -- Required variables
 PIXIVFE_PORT=8282
