--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,8 +20,8 @@ nav:
     - dev/pitfalls.md
     - dev/unified.md
     - dev/user-customization.md
-repo_name: vnpower/pixivfe
-repo_url: https://codeberg.org/vnpower/pixivfe
+repo_name: VnPower/PixivFE
+repo_url: https://codeberg.org/VnPower/PixivFE
 edit_uri: _edit/v2/doc/
 copyright: GFDL-1.3-or-later
 theme:
