--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,7 @@ theme:
   icon:
     logo: simple/pixiv
     repo: simple/codeberg
-  favicon: favicon.ico
+  favicon: favicon.png
   features:
     # -- Navigation
     # Instant loading
