--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,24 +8,25 @@ nav:
   - "Public image proxies": "public-image-proxies.md"
   - "Known quirks": "known-quirks.md"
   - "Hosting":
-    - "Environment variables": "environment-variables.md"
-    - "Hosting PixivFE": "hosting-pixivfe.md"
-    - "Hosting an image proxy server for Pixiv": "hosting-image-proxy-server.md"
-    - "Obtaining the PIXIVFE_TOKEN cookie": "obtaining-pixivfe-token.md"
+    - "Index": "hosting/index.md"
+    - "Environment variables": "hosting/environment-variables.md"
+    - "Hosting PixivFE": "hosting/hosting-pixivfe.md"
+    - "Hosting an image proxy server for Pixiv": "hosting/hosting-image-proxy-server.md"
+    - "Obtaining the PIXIVFE_TOKEN cookie": "hosting/obtaining-pixivfe-token.md"
   - "Development":
-    - dev/index.md
-    - dev/framework-migration.md
-    - dev/coding-tips.md
-    - dev/design-flaws.md
-    - dev/feature-ideas.md
-    - dev/helpful-resources.md
-    - dev/roadmap.md
-    - dev/testing.md
+    - "Index": "dev/index.md"
+    - "Framework migration": "dev/framework-migration.md"
+    - "Coding tips": "dev/coding-tips.md"
+    - "Design flaws": "dev/design-flaws.md"
+    - "Feature ideas": "dev/feature-ideas.md"
+    - "Helpful resources": "dev/helpful-resources.md"
+    - "Roadmap": "dev/roadmap.md"
+    - "Testing": "dev/testing.md"
     - "Features":
-      - dev/features/caching.md
-      - dev/features/novels.md
-      - dev/features/tracing-flamegraph.md
-      - dev/features/user-customization.md
+      - "Caching": "dev/features/caching.md"
+      - "Novels": "dev/features/novels.md"
+      - "Tracing flamegraph": "dev/features/tracing-flamegraph.md"
+      - "User customization": "dev/features/user-customization.md"
 repo_name: VnPower/PixivFE
 repo_url: https://codeberg.org/VnPower/PixivFE
 edit_uri: _edit/v2/doc/
