--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -16,6 +16,7 @@ mkdocs-git-revision-date-localized-plugin==1.2.4
 mkdocs-glightbox==0.3.7
 mkdocs-material==9.5.15
 mkdocs-material-extensions==1.3.1
+mkdocs-redirects==1.2.1
 mkdocs-table-reader-plugin==2.1.0
 numpy==1.26.4
 packaging==24.0
