--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,13 +8,13 @@ nav:
   - "Public image proxies": "public-image-proxies.md"
   - "Known quirks": "known-quirks.md"
   - "Hosting":
-    - "Index": "hosting/index.md"
+    - "hosting/index.md" # Leave without title
     - "Environment variables": "hosting/environment-variables.md"
     - "Hosting PixivFE": "hosting/hosting-pixivfe.md"
     - "Hosting an image proxy server for Pixiv": "hosting/image-proxy-server.md"
     - "Obtaining the PIXIVFE_TOKEN cookie": "hosting/obtaining-pixivfe-token.md"
   - "Development":
-    - "Index": "dev/index.md"
+    - "dev/index.md" # Leave without title
     - "Framework migration": "dev/framework-migration.md"
     - "Coding tips": "dev/coding-tips.md"
     - "Design flaws": "dev/design-flaws.md"
