ci: fix mkdocs-git-revision-date-localized-plugin
src: https://github.com/timvink/mkdocs-git-revision-date-localized-plugin/blob/407346e21fde2982156189d357b6ee05cba7dca4/README.md#note-when-using-build-systems-like-github-actions

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -3,6 +3,13 @@ variables:
   - path: &docs_path
       include: ['doc/**', 'mkdocs.yml']
 
+clone:
+  - name: git
+    image: woodpeckerci/plugin-git
+    settings:
+      partial: false
+      depth: 0
+
 steps:
   docker-build-image:
     image: woodpeckerci/plugin-docker-buildx:latest
