--- a/.woodpecker/trivy.yaml
+++ b/.woodpecker/trivy.yaml
@@ -1,13 +1,9 @@
 # -- Plugin to find vulnerabilities, misconfigurations, secrets, SBOM and more.
 # ref: https://woodpecker-ci.org/plugins/Trivy
-steps:
+pipeline:
   trivy:
     image: aquasec/trivy:latest
-    settings:
-      exit-code: 1
-      skip-dirs: doc/
-      dir: .
-      severity: MEDIUM,HIGH,CRITICAL
-    when:
-      - event: [ push, tag, release, manual ]
-        branch: [ v2 ]
+    commands:
+      # use any trivy command, if exit code is 0 woodpecker marks it as passed, else it assumes it failed
+      - trivy fs --exit-code 1 --skip-dirs doc/ --severity MEDIUM,HIGH,CRITICAL .
+
