--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,4 @@ PIXIVFE_USERAGENT=Mozilla/5.0 (Windows NT 10.0; rv:123.0) Gecko/20100101 Firefox
 PIXIVFE_ACCEPTLANGUAGE=en-US,en;q=0.5
 # PIXIVFE_DEV=
 # PIXIVFE_PROXY_CHECK_INTERVAL=
-# PIXIVFE_LOAD_BALANCING=
+# PIXIVFE_TOKEN_LOAD_BALANCING=
