--- a/.woodpecker/docker.yaml
+++ b/.woodpecker/docker.yaml
@@ -1,11 +1,5 @@
 variables:
   - &buildx_plugin 'woodpeckerci/plugin-docker-buildx:latest'
-  - publish_logins: &publish_logins # Default DockerHub login
-      - registry: https://index.docker.io/v1/
-        username:
-          from_secret: DOCKER_USERNAME
-        password:
-          from_secret: DOCKER_PASSWORD
   - path: &when_path
       # web source code
       - 'assets/**'
@@ -17,13 +11,23 @@ variables:
       # pipeline config changes
       - '.woodpecker/docker.yaml'
 
+when:
+  - event: [ tag, release ]
+    branch: [ v2 ]
+  - event: [ push ]
+    branch: [ v2 ]
+    path: *when_path
+
 steps:
   release:
     image: *buildx_plugin
     settings:
       dockerfile: Dockerfile
       repo: vnpower/pixivfe
-      logins: *publish_logins
+      username:
+        from_secret: DOCKER_USERNAME
+      password:
+        from_secret: DOCKER_PASSWORD
       tag: [latest, '${CI_COMMIT_TAG}']
     when:
       - event: [ tag, release ]
