--- a/.woodpecker/docker.yaml
+++ b/.woodpecker/docker.yaml
@@ -1,5 +1,6 @@
 variables:
   - &buildx_plugin 'woodpeckerci/plugin-docker-buildx:latest'
+  - &platforms 'linux/arm/v7,linux/arm64/v8,linux/amd64'
   - publish_logins: &publish_logins # Default DockerHub login
       - registry: https://index.docker.io/v1/
         username:
@@ -21,8 +22,9 @@ steps:
   release:
     image: *buildx_plugin
     settings:
-      dockerfile: Dockerfile
       repo: vnpower/pixivfe
+      dockerfile: Dockerfile
+      platforms: *platforms
       logins: *publish_logins
       tag: [latest, '${CI_COMMIT_TAG}']
     when:
@@ -32,8 +34,9 @@ steps:
   next:
     image: *buildx_plugin
     settings:
-      dockerfile: Dockerfile
       repo: vnpower/pixivfe
+      dockerfile: Dockerfile
+      platforms: *platforms
       logins: *publish_logins
       tag: [next, 'next-${CI_COMMIT_SHA:0:10}']
     when:
