Add configurable repository URL
This commit introduces a new PIXIVFE_REPO_URL configuration option,
allowing users to specify a custom repository URL.

The about page now uses this configurable URL, and the configuration
loading process has been updated to validate and handle the new option.

Documentation has been updated to reflect these changes.

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,32 @@
-# -- PixivFE configuration
+# PixivFE configuration
 # Refer to https://pixivfe-docs.pages.dev/environment-variables/ for detailed explanations of these variables
 
-# -- Required variables
+## Required variables
 PIXIVFE_PORT=8282
 # PIXIVFE_UNIXSOCKET=/srv/http/pages/pixivfe
 # PIXIVFE_TOKEN=changethis
 
-# -- Optional variables
+## Optional variables
 PIXIVFE_HOST=127.0.0.1
 # PIXIVFE_REQUESTLIMIT=
 # PIXIVFE_IMAGEPROXY=
-PIXIVFE_USERAGENT=Mozilla/5.0 (Windows NT 10.0; rv:123.0) Gecko/20100101 Firefox/123.0
-PIXIVFE_ACCEPTLANGUAGE=en-US,en;q=0.5
-# PIXIVFE_DEV=
+# PIXIVFE_USERAGENT=Mozilla/5.0 (Windows NT 10.0; rv:123.0) Gecko/20100101 Firefox/123.0
+# PIXIVFE_ACCEPTLANGUAGE=en-US,en;q=0.5
 # PIXIVFE_PROXY_CHECK_INTERVAL=
 # PIXIVFE_TOKEN_LOAD_BALANCING=
+# PIXIVFE_REPO_URL=
+
+### Exponential backoff configuration
+#### API request level backoff
+# PIXIVFE_API_MAX_RETRIES=
+# PIXIVFE_API_BASE_TIMEOUT=
+# PIXIVFE_API_MAX_BACKOFF_TIME=
+
+#### Token management level backoff
+# PIXIVFE_MAX_RETRIES=
+# PIXIVFE_BASE_TIMEOUT=
+# PIXIVFE_MAX_BACKOFF_TIME=
+
+### Development options
+# PIXIVFE_DEV=
+# PIXIVFE_RESPONSE_SAVE_LOCATION
