--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,16 @@
 # Refer to https://pixivfe-docs.pages.dev/environment-variables/ for detailed explanations of these variables
 
 ## Required variables
-PIXIVFE_PORT=8282
-# PIXIVFE_UNIXSOCKET=/srv/http/pages/pixivfe
-# PIXIVFE_TOKEN=changethis
+PIXIVFE_PORT='8282'
+# PIXIVFE_UNIXSOCKET='/srv/http/pages/pixivfe'
+# PIXIVFE_TOKEN='changethis'
 
 ## Optional variables
-PIXIVFE_HOST=127.0.0.1
+PIXIVFE_HOST='127.0.0.1'
 # PIXIVFE_REQUESTLIMIT=
 # PIXIVFE_IMAGEPROXY=
-# PIXIVFE_USERAGENT=Mozilla/5.0 (Windows NT 10.0; rv:123.0) Gecko/20100101 Firefox/123.0
-# PIXIVFE_ACCEPTLANGUAGE=en-US,en;q=0.5
+# PIXIVFE_USERAGENT='Mozilla/5.0 (Windows NT 10.0; rv:123.0) Gecko/20100101 Firefox/123.0'
+# PIXIVFE_ACCEPTLANGUAGE='en-US,en;q=0.5'
 # PIXIVFE_PROXY_CHECK_INTERVAL=
 # PIXIVFE_TOKEN_LOAD_BALANCING=
 # PIXIVFE_REPO_URL=
