docs: network proxy configuration
ref: https://codeberg.org/VnPower/PixivFE/pulls/111

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ PIXIVFE_HOST='127.0.0.1'
 # PIXIVFE_TOKEN_LOAD_BALANCING=
 # PIXIVFE_REPO_URL=
 
+### Network proxy settings
+# HTTPS_PROXY=
+# HTTP_PROXY=
+
 ### Exponential backoff configuration
 #### API request level backoff
 # PIXIVFE_API_MAX_RETRIES=
