--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,7 @@ PIXIVFE_PORT='8282'
 PIXIVFE_HOST='127.0.0.1'
 # PIXIVFE_REQUESTLIMIT=
 # PIXIVFE_IMAGEPROXY=
-# PIXIVFE_USERAGENT='Mozilla/5.0 (Windows NT 10.0; rv:123.0) Gecko/20100101 Firefox/123.0'
-# PIXIVFE_ACCEPTLANGUAGE='en-US,en;q=0.5'
+# PIXIVFE_ACCEPTLANGUAGE=
 # PIXIVFE_PROXY_CHECK_INTERVAL=
 # PIXIVFE_TOKEN_LOAD_BALANCING=
 # PIXIVFE_REPO_URL=
