Add option to disable image proxy checker
This commit introduces a new configuration option to disable the image proxy
checker. A new environment variable PIXIVFE_PROXY_CHECK_ENABLED and
corresponding ServerConfig field are added. The main.go file is updated
to conditionally initialise the proxy checker based on this setting.

Documentation is also updated to explain the new configuration options.

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ PIXIVFE_HOST='127.0.0.1'
 # PIXIVFE_REQUESTLIMIT=
 # PIXIVFE_IMAGEPROXY=
 # PIXIVFE_ACCEPTLANGUAGE=
+# PIXIVFE_PROXY_CHECK_ENABLED=
 # PIXIVFE_PROXY_CHECK_INTERVAL=
 # PIXIVFE_TOKEN_LOAD_BALANCING=
 # PIXIVFE_REPO_URL=
