--- a/semgrep.yml
+++ b/semgrep.yml
@@ -164,3 +164,12 @@ rules:
   - pattern-not-inside: |
       ...
       defer $RESP.Body.Close()
+- id: rule-13
+  message: "error string"
+  languages: [go]
+  severity: INFO
+  pattern-either:
+  - pattern: |
+      errors.New(...)
+  - pattern: |
+      fmt.Errorf(...)
